kong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:latest
          ports:
          - containerPort: 8000
          - containerPort: 8443
          - containerPort: 8001
          - containerPort: 8444
