kong/init-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kong-ddbb-init
  labels:
    purpose: kong-ddbb-init
spec:
  containers:
  - name: kong-ddbb-init-container
    image: kong:latest
    command: ["kong"]
    args: ["migrations", "bootstrap"]
    resources: {}
  restartPolicy: OnFailure
