kong/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kong
  name: kong-service
spec:
  ports:
    - name: proxy-http
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: admin-http
      port: 8001
      protocol: TCP
      targetPort: 8001
    - name: proxy-https
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: admin-https
      port: 8444
      protocol: TCP
      targetPort: 8444
  selector:
    app: kong
  type: ClusterIP
