kong/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-api-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: api.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-kong-proxy 
          servicePort: 80
  tls:
  - hosts:
    - api.ithub.space
    secretName: api-ithub-space-prod-tls
